--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -23,8 +23,13 @@
   margin-top: 50px;
 }
 .b-content .mdl-cell.__info {
-  min-height: 200px;
+  padding: 0
 }
+.b-content .left-side {
+  min-height: 200px;
+  padding: 8px
+}
+  
 .b-content .mdl-grid.__content {
   padding-top: 0;
   padding-right: 0;
